# grokcode

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
grokcode/agent/: agent.py  grok_client.py  multi_agent.py  system_prompt.py  tool_registry.py  types.py
grokcode/cli/: config_cmd.py  main.py  repl.py  search.py  session.py  workspace.py
grokcode/config/: config.py  keychain.py
grokcode/onboarding/: analyser.py  audio.py  player.py  script.py
grokcode/repl/commands/: onboard.py
grokcode/search/: search.py
grokcode/session/: handoff.py  session.py
grokcode/tools/: bash.py  fs.py  git.py  mcp_client.py
grokcode/utils/: audit.py  ui.py
grokcode/workspace/: collections_client.py  local_store.py  workspace.py
scripts/: smoke_test.py
specifications/: grokcode_spec.md  grokcode_todo.md
tests/integration/: test_agent_integration.py  test_handoff_integration.py  test_workspace_integration.py
tests/onboarding/: test_analyser.py  test_audio.py  test_player.py  test_script.py
tests/unit/: test_audit.py  test_config.py  test_fs_tools.py  test_grok_client.py  test_search.py  test_session.py  test_system_prompt.py  test_workspace.py
