[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "grokcode"
version = "0.1.0"
description = "Agentic coding CLI powered by xAI Grok"

requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "gravity9" }]
keywords = ["cli", "ai", "coding", "grok", "xai", "agent"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "typer[all]>=0.12",
    "rich>=13",
    "httpx>=0.27",
    "pydantic>=2.0",
    "keyring>=24",
    "keyrings.alt>=5",
    "python-dotenv>=1.0",
    "aiofiles>=23",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
    "pytest-cov",
    "ruff",
    "mypy",
    "types-aiofiles",
]

[project.scripts]
grokcode = "grokcode.cli.main:app"

[tool.hatch.build.targets.wheel]
packages = ["grokcode"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["grokcode"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--tb=short"

[tool.mypy]
strict = true
python_version = "3.11"
ignore_missing_imports = true

[tool.coverage.run]
source = ["grokcode"]
omit = ["tests/*"]
